<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>at.syntaxerror</groupId>
	<artifactId>syntaxnbt</artifactId>
	<version>1.0.0</version>
  
	<name>SyntaxNBT</name>
	<description>A NBT and SNBT library for Java</description>

	<licenses>
		<license>
			<name>The MIT License</name>
			<url>https://github.com/Synt4xErr0r4/syntaxnbt/blob/main/LICENSE</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	
	<developers>
		<developer>
			<id>syntaxerror404</id>
			<name>SyntaxError404</name>
			<email>thomas@syntaxerror.at</email>
			<url>https://syntaxerror.at</url>
			<timezone>Europe/Vienna</timezone>
		</developer>
	</developers>
	
	<scm>
		<connection>scm:git:git://github.com/Synt4xErr0r4/syntaxnbt.git</connection>
		<url>http://github.com/Synt4xErr0r4/syntaxnbt</url>
	</scm>
	
	<issueManagement>
		<system>GitHub Issues</system>
		<url>https://github.com/Synt4xErr0r4/syntaxnbt/issues</url>
	</issueManagement>
	
	<build>
		<sourceDirectory>src/main/java</sourceDirectory>
	
		<plugins>
			<plugin>
		    	<groupId>org.projectlombok</groupId>
	    		<artifactId>lombok-maven-plugin</artifactId>
    			<version>1.18.20.0</version>
    			<configuration>
    				<encoding>UTF-8</encoding>
    				<sourceDirectory>src/main/java</sourceDirectory>
    				<outputDirectory>target/delombok</outputDirectory>
    			</configuration>
		    </plugin>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>target/delombok</source>
					<release>17</release>
					<compilerArgs>--enable-preview</compilerArgs>
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
							<version>1.18.20</version>
						</path>
					</annotationProcessorPaths>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.3.0</version>
				<executions>
					<execution>
						<goals>
							<goal>aggregate-jar</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<sourcepath>target/delombok</sourcepath>
					<level>public</level>
					<release>17</release>
					<additionalOptions>--enable-preview</additionalOptions>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.2.0</version>
				<executions>
					<execution>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
				</configuration>
			</plugin>
		</plugins>
	    <extensions>
	    	<extension>
	    		<groupId>org.apache.maven.wagon</groupId>
	    		<artifactId>wagon-ftp</artifactId>
	    		<version>3.2.0</version>
	      	</extension>
	    </extensions>
	</build>
	
	<dependencies>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.22</version>
			<scope>provided</scope>
		</dependency>
	</dependencies>
	
	<distributionManagement>
  		<repository>
			<id>syntaxerror.at</id>
			<url>ftp://syntaxerror404.lima-ftp.de/</url>
 		</repository>
  	</distributionManagement>
</project>